--- a/task1_10/css/task.css
+++ b/task1_10/css/task.css
@@ -1,94 +1,48 @@
-
-Skip to content
-This repository
-
-    Pull requests
-    Issues
-    Gist
-
-    @lxvy
-
-2
-9
-
-    36
-
-soulclearm/Learn_front_end
-Code
-Issues 0
-Pull requests 0
-Projects 0
-Wiki
-Pulse
-Graphs
-Learn_front_end/public/stylesheets/task10.css
-8d6fa4e on 6 May
-@soulclearm soulclearm 处理css
-66 lines (57 sloc) 1.14 KB
-* {
-    padding: 20px;
-    margin: 0px;
-}
-
-.flex,
-.flex > div {
-    box-sizing: border-box;
-}
-
-.flex {
-    border: 1px solid gray;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+.flex-container
+{
     display: flex;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-flex: none;
-        -ms-flex: none;
-            flex: none;
+    flex-direction: row;
+    background-color: #ccc;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    margin: 0;
+    border: 1px solid #111;
 }
-
-.flex > div {
-    width: 150px;
-    border: 1px solid #f00;
-    padding: 0;
-    margin-bottom: 10px;
+.flex-item{
+	width: 150px;
+	border: 1px solid #f00;
+	padding: 20px;
 }
-
-.flex_item1 {
-    height: 120px;
+.flex-item1{
+	height: 150px;
 }
-
-.flex_item2 {
-    height: 100px;
+.flex-item2{
+	height: 100px;
 }
-
-.flex_item3 {
-    height: 40px;
+.flex-item3{
+	height: 50px;
 }
-
-.flex_item4 {
-    height: 200px;
-    border: 1px solid blue!important;
+.flex-item4{
+	border: 1px solid #00f;
+	height: 200px;
 }
-
 @media all and (max-width: 640px) {
-    .flex_item4 {
-        -webkit-order: -1;
-            -ms-flex-order: -1;
-                order: -1;
-    }
-    .flex {
-        -webkit-flex-wrap: wrap;
-            -ms-flex-wrap: wrap;
-                flex-wrap: wrap;
-        -webkit-align-items: flex-start;
-            -ms-flex-align: start;
-                align-items: flex-start;
-    }
+	.flex-item4{
+		-webkit-order: -1;
+		-moz-order: -1;
+		-ms-order: -1;
+		-o-order: -1;
+		order: -1;
+	}
+	.flex-container{
+		-webkit-flex-wrap: wrap;
+		-moz-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		-o-flex-wrap: wrap;
+		flex-wrap: wrap;
+		-ms-align-items: flex-start;
+		align-items: flex-start;
+		-ms-flex-align: start;
+	}
 }
-
-
