--- a/task1_10/css/task.css
+++ b/task1_10/css/task.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: row;
-    background-color: #ccc;
+    background-color: #eee;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
